fix info margin,gap and link width

--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ span {
 .site {
     display: flex;
     align-items: center;
-    margin: 0.5rem 0;
-    gap: 0.5rem;
+    margin: 10px 0;
+    gap: 10px;
 }
 
 .number__img,
@@ -112,7 +112,7 @@ span {
 .facebook,
 .instargram,
 .x {
-    width: 3vw;
+    width: 4vw;
 }
 
 
@@ -149,4 +149,11 @@ span {
     .site__a {
         font-size: 1.5rem;
     }
+
+    .facebook,
+    .instargram,
+    .x {
+        width: 30px;
+    }
+
 }
